Resolved defect #697350 to fix where the logo in the header was cut off in Firefox

--- a/webroot/skin/frontend/blueacorn/mis/css/styles.css
+++ b/webroot/skin/frontend/blueacorn/mis/css/styles.css
@@ -2834,7 +2834,7 @@ body {
     max-height: 40px;
     text-align: left;
     float: left;
-    width: 193px; }
+    width: 197px; }
   .logo .small {
     display: block; }
   .logo .large {
